<resources>
    <string name="app_name">Semana06Fragments</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_registro">Principal</string>
    <string name="menu_musica">Principal</string>

    <string name="title_principal">Fragmentos de Android</string>

    <string name="valrbtmale">Male</string>
    <string name="valrbtfemale">Female</string>
    <string name="valrbtother">Other</string>


    <string name="valchklicense">License</string>
    <string name="valchkcar">Car</string>
    <string name="valbtnsave">SAVE</string>

    <string-array name="country_array">
        <item> Brasil</item>
        <item> Argentina </item>
        <item> Colombia</item>
        <item> Uruguay</item>
        <item> Ecuador</item>
        <item> Venezuela</item>
        <item> Chile</item>
        <item> Peru</item>
        <item> Bolivia</item>

    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>